# Memori

./: pyproject.toml
core/bindings/node/src/: engine.rs
core/src/storage/: bridge.rs  dialect.rs  manager.rs
core/src/storage/drivers/: mod.rs  mysql.rs  postgresql.rs  sqlite.rs
memori-ts/src/native/: index.d.ts  index.js
memori-ts/src/storage/: manager.ts
memori-ts/src/storage/adapters/: mysql.ts
memori-ts/tests/storage/: adapters.test.ts
