[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memori"
version = "0.1.0"
description = "A self-hosted memory layer for AI assistants — fork of MemoriLabs/Memori"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "Memori Contributors" },
]
keywords = ["memory", "ai", "llm", "vector-database", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
    "tenacity>=8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "factory-boy>=3.3.0",
]

[project.scripts]
memori = "memori.main:main"

[project.urls]
Homepage = "https://github.com/your-org/memori"
Repository = "https://github.com/your-org/memori"
Issues = "https://github.com/your-org/memori/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/memori"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["memori"]

[tool.mypy]
python_version = "3.11"
# Relaxing strict mode for personal experimentation — easier to prototype without
# having to annotate every helper function immediately.
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/memori --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["src/memori"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
